--- a/back/pd311_web_api/appsettings.json
+++ b/back/pd311_web_api/appsettings.json
@@ -7,11 +7,11 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "NpgsqlLocal": "User ID=postgres;Password=qwerty;Host=localhost;Port=5432;Database=pd311_web_api;",
-    "NpgsqlAzure": "User ID=dima;Password=Qwerty123;Host=pd311db.postgres.database.azure.com;Port=5432;Database=postgres;"
+    "NpgSqlLocal": "User ID=postgres;Password=qwerty;Host=localhost;Port=5444;Database=pv311_web_api;",
+    "NpgSqlAzure": "User ID=ciri;Password=Qezcwxads123;Host=ciri.postgres.database.azure.com;Port=5432;Database=postgres;"
   },
   "Cors": {
-    "AllowedOrigins": ["http://localhost:5173"]
+    "AllowedOrigins": [ "http://localhost:5173" ]
   },
   "SmtpSettings": {
     "Host": "smtp.gmail.com",
